<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.micromata.jak</groupId>
	<artifactId>JavaAPIforKml</artifactId>
	<version>2.3.0-SNAPSHOT</version>
	<name>a Java API for Kml</name>
	<description>This is JavaAPIforKMml, Micromata's library for use with applications that want to parse, generate and operate on KML. It is an implementation of the OGC KML 2.2 standard. It is written entirely in Java and makes heavy use of JAXB.</description>
	<packaging>jar</packaging>
	<url>https://github.com/micromata/javaapiforkml</url>
	<organization>
		<name>Micromata GmbH</name>
		<url>http://micromata.de</url>
	</organization>
  	<parent>
    	<groupId>org.sonatype.oss</groupId>
    	<artifactId>oss-parent</artifactId>
    	<version>7</version>
  	</parent>
	<scm>
		<url>https://github.com/micromata/javaapiforkml</url>
        <connection>scm:git:git://github.com/micromata/javaapiforkml.git</connection>
        <developerConnection>scm:git:git@github.com:micromata/javaapiforkml.git</developerConnection>
	</scm>
	<developers>
		<developer>
			<id>bachmann.florian</id>
			<name>Florian Bachmann</name>
			<email>f.bachmann@micromata.de</email>
			<organization>Micromata GmbH</organization>
			<organizationUrl>http://www.micromata.com</organizationUrl>
			<timezone>-1</timezone>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>schnitzelhugo</id>
			<name>Bernd Kratz</name>
			<email>b.kratz@micromata.de</email>
			<organization>Micromata GmbH</organization>
			<organizationUrl>http://www.micromata.com</organizationUrl>
			<timezone>-1</timezone>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>landgraf1967</id>
			<name>Thomas Landgraf</name>
			<email>tl@micromata.de</email>
			<organization>Micromata GmbH</organization>
			<organizationUrl>http://www.micromata.com</organizationUrl>
			<timezone>-1</timezone>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>BSD license</name>
			<url>/LICENSE.txt</url>
			<comments>All rights reserved.</comments>
			<distribution>manual</distribution>
		</license>
	</licenses>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<!--
				code generation part disabled, till all files are in public maven repositories <plugin>
				<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-antrun-plugin</artifactId> <executions> <execution>
				<id>xjc-invocation</id> <phase>generate-sources</phase> <configuration> <tasks> <property name="src.dir"
				location="src/main" /> <property name="src.dir.gen" location="${src.dir}/java" /> <property name="schema.dir"
				value="${src.dir}/resources/schema" /> <property name="schema.dir.kml" location="${schema.dir}/ogckml/ogckml22.xsd"
				/> <property name="schema.dir.kml.binding" value="${schema.dir}/ogckml/JAK_binding.xjb" /> <taskdef name="xjc"
				classname="com.sun.tools.xjc.XJCTask" classpathref="maven.compile.classpath" /> <description>generate JAK from OGC's
				KML schema</description> <mkdir dir="${src.dir.gen}/de/micromata/opengis/kml/" /> <delete> <fileset
				dir="${src.dir.gen}/de/micromata/opengis/kml/" includes="**" /> </delete> <xjc extension="true"
				binding="${schema.dir.kml.binding}" destdir="${src.dir.gen}" removeOldOutput="yes"
				schema="${schema.dir}/ogckml/kml22gx.xsd"> <arg value="-XJavaForKmlApi" /> </xjc> <exec executable="perl"
				dir="${basedir}"> <arg file="scripts/CleanUpGeneratedJAXBSourceFolder.pl" /> <arg
				file="${src.dir.gen}/de/micromata/opengis/kml" /> </exec> </tasks> </configuration> <goals> <goal>run</goal>
				</goals> </execution> </executions> </plugin>
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.jvnet.wagon-svn</groupId>
				<artifactId>wagon-svn</artifactId>
				<version>1.9</version>
			</extension>
		</extensions>
	</build>
	<properties>
		<jaxb.version>4.0.1</jaxb.version>
		<log4j.version>1.2.17</log4j.version>
		<junit.version>4.13.1</junit.version>
		<xmlunit.version>1.6</xmlunit.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-xjc</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>xmlunit</groupId>
			<artifactId>xmlunit</artifactId>
			<version>${xmlunit.version}</version>
      <scope>test</scope>
		</dependency>
		<!--
			code generation part disabled, till all files are in public maven repositories <dependency>
			<groupId>de.micromata.jak</groupId> <artifactId>XJCPluginJavaApiforKml</artifactId> <version>1.0-SNAPSHOT</version>
			<type>jar</type> <scope>compile</scope> </dependency>
		-->
	</dependencies>

	<repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Maven 2 Repository</name>
			<url>https://download.java.net/maven/2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>maven-repository.dev.java.net</id>
			<name>Java.net Maven 1 Repository (legacy)</name>
			<url>https://download.java.net/maven/1</url>
			<layout>legacy</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Maven 2 Repository</name>
			<url>https://download.java.net/maven/2</url>
		</pluginRepository>
		<pluginRepository>
			<id>maven-repository.dev.java.net</id>
			<name>Java.net Maven 1 Repository (legacy)</name>
			<url>https://download.java.net/maven/1</url>
			<layout>legacy</layout>
		</pluginRepository>
	</pluginRepositories>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
				</configuration>
				<reportSets>
					<reportSet>
						<id>html</id>
						<configuration>
							<doctitle>My API for ${project.name} ${project.version}</doctitle>
							<windowtitle>My API for ${project.name} ${project.version}</windowtitle>
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>test-html</id>
						<configuration>
							<testDoctitle>My Test API for ${project.name} ${project.version}</testDoctitle>
							<testWindowtitle>My Test API for ${project.name}
								${project.version}</testWindowtitle>
						</configuration>
						<reports>
							<report>test-javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changelog-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
		</plugins>
	</reporting>
	<profiles>
		<profile>
			<id>clover.all</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.atlassian.maven.plugins</groupId>
						<artifactId>maven-clover2-plugin</artifactId>
						<version>2.5.1</version>
						<configuration>
							<snapshot>${user.home}/.clover/${groupId}-${artifactId}/clover.snapshot</snapshot>
							<license><![CDATA[QPORQwLRnqofKiVJNSQIKsdKNrrATjdKLVUWxSxJsxdmrDo
									  mj2KlpGKhDbmto<pV8EfyyGI2L0GfmTXJbnDjh3vD0PmE2E
									  qNNNtTmqpmmnOnooqRRsuoRMPqnOoPopOrxxtWtVSsWXSMu
									  TWXVUqqonmqmUUnoqvnprommmmmUUnoqvnprommmmmUUDfZ
									  oljXqXW7jY8UUnmm]]>
							</license>
							<excludes>
								<exclude>**/de/micromata/opengis/kml/v_2_2_0/annotations/**</exclude>
								<exclude>**/de/micromata/opengis/kml/v_2_2_0/atom/**</exclude>
								<exclude>**/de/micromata/opengis/kml/v_2_2_0/xal/**</exclude>
								<exclude>**/de/micromata/jak/**</exclude>
								<exclude>**/de/micromata/jak/jugh/**</exclude>
								<exclude>**/de/micromata/jak/incubator/**</exclude>
								<exclude>**/de/micromata/jak/internal/**</exclude>
							</excludes>
							<generatePdf>true</generatePdf>
							<generateXml>true</generateXml>
							<generateHtml>true</generateHtml>
						</configuration>
						<executions>
							<execution>
								<id>clover</id>
								<goals>
									<goal>setup</goal>
									<goal>optimize</goal>
									<goal>snapshot</goal>
								</goals>
							</execution>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>clover</goal>
									<goal>log</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>